merged branch B2005_09_13_SOP: beginning of SOP refactorization