@@ -17,22 +17,16 @@ import org.apache.struts.util.LabelValueBean;
 public class Season extends FenixUtil {
 
     public static final int SEASON1 = 1;
-
     public static final int SEASON2 = 2;
-
     public static final int SPECIAL_SEASON = 3;
 
     public static final String SEASON1_STRING = "1ª Época";
-
     public static final String SEASON2_STRING = "2ª Época";
-
     public static final String SPECIAL_SEASON_STRING = "Época Especial";
-
     public static final String DEFAULT = "[Escolha a Epoca]";
 
     private Integer season;
 
-    /** Creates a new instance of EpocaExame */
     public Season() {
     }
 
@@ -46,11 +40,11 @@ public class Season extends FenixUtil {
 
     public Season(String season) {
         if (season.equals(Season.SEASON1_STRING))
-            this.season = new Integer(Season.SEASON1);
+            this.season = Integer.valueOf(Season.SEASON1);
         if (season.equals(Season.SEASON2_STRING))
-            this.season = new Integer(Season.SEASON2);
+            this.season = Integer.valueOf(Season.SEASON2);
         if (season.equals(Season.SPECIAL_SEASON_STRING))
-            this.season = new Integer(Season.SPECIAL_SEASON);
+            this.season = Integer.valueOf(Season.SPECIAL_SEASON);
     }
 
     public boolean equals(Object o) {
@@ -58,9 +52,7 @@ public class Season extends FenixUtil {
             Season aux = (Season) o;
             return this.season.equals(aux.getseason());
         }
-
         return false;
-
     }
 
     public List toArrayList() {
@@ -79,15 +71,9 @@ public class Season extends FenixUtil {
             return Season.SEASON2_STRING;
         if (season.intValue() == Season.SPECIAL_SEASON)
             return Season.SPECIAL_SEASON_STRING;
-        return "ERRO!"; // Nunca e atingido
+        return "ERROR"; 
     }
 
-    /**
-     * Getter for property season.
-     * 
-     * @return Value of property season.
-     *  
-     */
     public java.lang.Integer getseason() {
         return season;
     }
@@ -96,13 +82,6 @@ public class Season extends FenixUtil {
         return season;
     }
 
-    /**
-     * Setter for property season.
-     * 
-     * @param season
-     *            New value of property season.
-     *  
-     */
     public void setSeason(java.lang.Integer season) {
         this.season = season;
     }
